# Azure-RTOS-on-Azure-Sphere-Mediatek-MT3620

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  linker.ld
MT3620_lib/: CMakeLists.txt  CMakeSettings.json
demo_threadx/: demo_threadx.c
tx/: CMakeLists.txt  README.md
